# rdel

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile
.chglog/: config.yml
.github/: CHANGELOG.md
src/: cli.rs  main.rs  utils.rs
