[package]
name = "rdel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
include = ["src/**/*", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
env_logger = "0.9.0"
glob = "0.3.0"
log = "0.4.14"
