[package]
name = "rdel"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
include = ["src/**/*", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.42", features = ["cargo", "env", "wrap_help"] }
env_logger = "0.11.8"
log = "0.4.27"
